(SIMP-604) Migrate to simplib and simpcat
Before this commit, common SIMP-related custom functions were been kept
in either `simp-common` or `simp-functions`, and the `concat` function
was provided by the `simp-concat` module.  These functions are now
provides by the `simp-simplib` and `simp-simpcat` modules, respectively.

This update replaces all requirements in the RPM spec file,
metadata.json, or .fixtures.yml to reflect the migration to the new
modules.

SIMP-601 #comment Migrated `pupmod-simp-nscd`.
SIMP-604 #comment Updated `pupmod-simp-nscd`.

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -5,7 +5,8 @@ fixtures:
     augeasproviders_grub: "git://github.com/simp/augeasproviders_grub"
     auditd: "git://github.com/simp/pupmod-simp-auditd"
     common: "git://github.com/simp/pupmod-simp-common"
-    concat: "git://github.com/simp/pupmod-simp-concat"
+    simplib: "git://github.com/simp/pupmod-simp-simplib"
+    simpcat: "git://github.com/simp/pupmod-simp-concat"
     openldap: "git://github.com/simp/pupmod-simp-openldap"
     pki: "git://github.com/simp/pupmod-simp-pki"
     stdlib: "git://github.com/simp/puppetlabs-stdlib"
