(SIMP-398) Eliminate all uses of lsb* facts
This commit replaces all `lsb*` facts with their (package-independent)
`operatingsystem*` counterparts.

Also:
- normalized common static module assets
- created metadata.json
- corrected lint errors
- moved parameter validations to the top of each class
- updated rspec tests to the new `expect` syntax

SIMP-675 #close
SIMP-398 #comment updated `pupmod-simp-nscd`
SIMP-667 #comment updated `pupmod-simp-nscd`

Change-Id: I0085dcffe5c9e5a5bbb1949482f56be2c68fbcb4

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -9,6 +9,7 @@ fixtures:
     simpcat: "git://github.com/simp/pupmod-simp-concat"
     openldap: "git://github.com/simp/pupmod-simp-openldap"
     pki: "git://github.com/simp/pupmod-simp-pki"
+    sssd: "git://github.com/simp/pupmod-simp-sssd"
     stdlib: "git://github.com/simp/puppetlabs-stdlib"
   symlinks:
     nscd: "#{source_dir}"
