(SIMP-720) Remove remaining lsb* fact
Had one that hung on for the ride.

SIMP-720 #comment Update for OpenLDAP Testing with Puppet 4.3.2

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -10,5 +10,6 @@ fixtures:
     pki: "git://github.com/simp/pupmod-simp-pki"
     sssd: "git://github.com/simp/pupmod-simp-sssd"
     stdlib: "git://github.com/simp/puppetlabs-stdlib"
+    compliance_mapper: "git://github.com/trevor-vaughan/pupmod-compliance"
   symlinks:
     nscd: "#{source_dir}"
