--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,21 +1,23 @@
 ---
 fixtures:
   repositories:
-    auditd: "https://github.com/simp/pupmod-simp-auditd"
+    auditd: https://github.com/simp/pupmod-simp-auditd
     augeasproviders_core:
-      repo: "https://github.com/simp/augeasproviders_core"
-      branch: "simp-master"
+      repo: https://github.com/simp/augeasproviders_core
+      branch: simp-master
     augeasproviders_grub:
-      repo: "https://github.com/simp/augeasproviders_grub"
-      branch: "simp-master"
-    compliance_markup: "https://github.com/simp/pupmod-simp-compliance_markup"
-    simpcat: "https://github.com/simp/pupmod-simp-simpcat"
-    simplib: "https://github.com/simp/pupmod-simp-simplib"
-    openldap: "https://github.com/simp/pupmod-simp-openldap"
-    pki: "https://github.com/simp/pupmod-simp-pki"
-    sssd: "https://github.com/simp/pupmod-simp-sssd"
+      repo: https://github.com/simp/augeasproviders_grub
+      branch: simp-master
+    logrotate: https://github.com/simp/pupmod-simp-logrotate
+    openldap: https://github.com/simp/pupmod-simp-openldap
+    pki: https://github.com/simp/pupmod-simp-pki
+    rsyslog: https://github.com/simp/pupmod-simp-rsyslog
+    simpcat: https://github.com/simp/pupmod-simp-simpcat
+    simplib: https://github.com/simp/pupmod-simp-simplib
+    sssd: https://github.com/simp/pupmod-simp-sssd
     stdlib:
-      repo: "https://github.com/simp/puppetlabs-stdlib"
-      branch: "simp-master"
+      repo: https://github.com/simp/puppetlabs-stdlib
+      branch: simp-master
+
   symlinks:
     nscd: "#{source_dir}"
